--- a/themes/hugo-theme-codex/assets/scss/partials/_comments.scss
+++ b/themes/hugo-theme-codex/assets/scss/partials/_comments.scss
@@ -1,3 +1,5 @@
+@import "vars";
+
 .comments__title {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -12,7 +14,7 @@
 }
 
 .comment {
-  background-color: #9b9b9b2d;
+  background-color: $grey;
   margin-bottom: 0.5rem;
   padding: 0.75rem;
   border-radius: 0.25rem;
