--- a/themes/hugo-theme-codex/assets/scss/partials/_vars.scss
+++ b/themes/hugo-theme-codex/assets/scss/partials/_vars.scss
@@ -7,7 +7,7 @@ $burgerContainerHeight: 4rem;
 $black: #111;
 $lightGrey: #f7f7f7;
 $greyTableBorder: #eeeeee;
-$grey: #9b9b9b;
+$grey: #595959;
 $darkGrey: #717171;
 $white: #fff;
 $primary: #9013fe;
